--- a/framework/All.css
+++ b/framework/All.css
@@ -1,4 +1,5 @@
-/* background-colors */
+/* this framework is under development and it actually isn't meant to be used by other developers because it may not be stable yet */
+/* background-colors *be /
 .bg-blue {
     background-color: #0281CA;
 }
