--- a/framework/All.css
+++ b/framework/All.css
@@ -1,5 +1,5 @@
 /* this framework is under development and it actually isn't meant to be used by other developers because it may not be stable yet */
-/* background-colors *be /
+/* background-colors */
 .bg-blue {
     background-color: #0281CA;
 }
