--- a/framework/navs.css
+++ b/framework/navs.css
@@ -69,4 +69,7 @@ body {
         border-top: 1px solid #F5F5F5;
         border-bottom: 1px solid #F5F5F5;
     }
+    .nav_yakine {
+        width: 100%;
+    }
 }
