--- a/framework/Yakine-framework.css
+++ b/framework/Yakine-framework.css
@@ -51,6 +51,9 @@
 body {
     margin-top: 0;
 }
+body {
+    margin-top: 0;
+}
 /* framework fonts */
 @font-face {
     font-family: basefont;
@@ -65,7 +68,6 @@ body {
     display: flex;
     flex-direction: row;
     width: 500px;
-    background-color: #F5F5F5;
     margin: 0 auto;
     padding: 10px;
 }
@@ -82,17 +84,15 @@ body {
     flex-basis: 50%;
     text-align: center;
     font-family: basefont;
-    border: 1px solid transparent;
-    background-color: #fff;
     padding: 10px;
     transition: 100ms all linear;
     color: #4F4F4F;
+    background-color: #fff;
 }
 /* hover effect */
 .nav_item:hover {
     cursor: pointer;
-    background-color: transparent;
-    color: #464646;
+    background-color: #F5F5F5;
 }
 /* navigation items ordering classes */
 .item-first {
@@ -122,28 +122,6 @@ body {
     .nav_yakine {
         width: 100%;
     }
-}
-/* makes an image container */
-.image_container {
-    border: 1px solid transparent;
-    padding: 5px;
-}
-/* this is where the image is set as a background */
-/* the background-image height is 500px by default */
-.image {
-    height: 500px;
-    background-image: url('animage.jpg');
-    background-position: center;
-    background-size: cover;
-}
-/* makes the image smaller by 50% */
-.img-small {
-    height: 300px;
-}
-/* a simple image blur effect */
-.img-blur {
-    height: 100%;
-    opacity: 0.50;
 }
 /* text colors, they're the same as bg-colors but for text */
 .blue {
